--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -9,7 +9,6 @@
     <string name="menu_help">Segítség</string>
     <string name="menu_receive">Fogadás</string>
     <string name="menu_rename">Átnevezés</string>
-    <string name="menu_archive">Archiválás</string>
     <string name="menu_backup">Biztonsági mentés</string>
     <string name="menu_changepw">Jelszómódosítás</string>
 
@@ -93,7 +92,6 @@
     <string name="service_progress">Műveletek befejezése&#8230;\nEz eltarthat egy ideig!</string>
 
     <string name="backup_failed">Sikertelen biztonsági mentés!</string>
-    <string name="archive_failed">Sikertelen archiválás!</string>
     <string name="rename_failed">Sikertelen átnevezés!</string>
     <string name="changepw_failed">Sikertelen jelszómódosítás!</string>
     <string name="changepw_success">Jelszó megváltoztatva</string>
@@ -266,9 +264,8 @@
     <string name="details_alert_no">Inkább ne!</string>
     <string name="details_title">Részletek</string>
 
-    <string name="archive_alert_message">A tárcáról biztonsági másolat készül, majd törlésre fog kerülni!</string>
-    <string name="archive_alert_yes">Igen, mehet!</string>
-    <string name="archive_alert_no">Inkább ne!</string>
+    <string name="delete_alert_yes">Igen, mehet!</string>
+    <string name="delete_alert_no">Inkább ne!</string>
 
     <string name="fab_create_new">Új tárca létrehozása</string>
     <string name="fab_restore_viewonly">Figyelőtárca visszaállítása</string>
@@ -424,4 +421,10 @@
     <string name="subaddress_select_label">Select a subaddress</string>
     <string name="subaddress_details_hint">Long-press for details</string>
 
+    <string name="delete_alert_message">The wallet will be deleted!</string>
+    <string name="menu_delete">Delete</string><!-- like: "Delete wallet!" -->
+    <string name="delete_failed">Delete failed!</string>
+
+    <string name="menu_restore">Import wallet</string>
+    <string name="restore_failed">Import failed!</string>
 </resources>
