--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -9,7 +9,6 @@
     <string name="menu_help">Aiuto</string>
     <string name="menu_receive">Ricevi</string>
     <string name="menu_rename">Rinomina</string>
-    <string name="menu_archive">Archivia</string>
     <string name="menu_backup">Backup</string>
     <string name="menu_changepw">Cambia passphrase</string>
 
@@ -95,7 +94,6 @@
 
     <string name="backup_success">Backup effettuato con successo</string>
     <string name="backup_failed">Backup fallito!</string>
-    <string name="archive_failed">Archiviazione fallita!</string>
     <string name="rename_failed">Rinomina fallita!</string>
     <string name="changepw_failed">Modifica password fallita!</string>
     <string name="changepw_success">Password cambiata</string>
@@ -268,9 +266,9 @@
     <string name="details_alert_no">Torna indietro!</string>
     <string name="details_title">Dettagli</string>
 
-    <string name="archive_alert_message">Il portafoglio verrà archiviato e poi eliminato!</string>
-    <string name="archive_alert_yes">Sì, procedi!</string>
-    <string name="archive_alert_no">No grazie!</string>
+    <string name="delete_alert_message">Il portafoglio verrà eliminato!</string>
+    <string name="delete_alert_yes">Sì, procedi!</string>
+    <string name="delete_alert_no">No grazie!</string>
 
     <string name="fab_create_new">Crea un nuovo portafoglio</string>
     <string name="fab_restore_viewonly">Recupera un portafoglio solo-visualizzazione</string>
@@ -425,4 +423,9 @@
     <string name="subaddress_select_label">Select a subaddress</string>
     <string name="subaddress_details_hint">Long-press for details</string>
 
+    <string name="menu_delete">Delete</string><!-- like: "Delete wallet!" -->
+    <string name="delete_failed">Delete failed!</string>
+
+    <string name="menu_restore">Import wallet</string>
+    <string name="restore_failed">Import failed!</string>
 </resources>
