--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -9,7 +9,6 @@
     <string name="menu_help">Hjelp</string>
     <string name="menu_receive">Motta</string>
     <string name="menu_rename">Gi nytt navn</string>
-    <string name="menu_archive">Arkiver</string>
     <string name="menu_backup">Backup</string>
     <string name="menu_changepw">[Forandre passord]</string>
 
@@ -93,7 +92,6 @@
 
     <string name="backup_success">Backup suksessfull</string>
     <string name="backup_failed">Backup feila!</string>
-    <string name="archive_failed">Arkivering feila!</string>
     <string name="rename_failed">Kunne ikke gi nytt navn!</string>
     <string name="changepw_failed">[Passordforandring feila!]</string>
     <string name="changepw_success">[Passord forandra]</string>
@@ -266,9 +264,8 @@
     <string name="details_alert_no">Ta meg tilbake!</string>
     <string name="details_title">Detaljer</string>
 
-    <string name="archive_alert_message">Lommeboka vil bli backa opp og så sletta!</string>
-    <string name="archive_alert_yes">Ja, gjør det!</string>
-    <string name="archive_alert_no">Nei takk!</string>
+    <string name="delete_alert_yes">Ja, gjør det!</string>
+    <string name="delete_alert_no">Nei takk!</string>
 
     <string name="fab_create_new">Lag ny lommebok</string>
     <string name="fab_restore_viewonly">Gjenoprett bare-se lommebok</string>
@@ -422,4 +419,10 @@
     <string name="subaddress_select_label">Select a subaddress</string>
     <string name="subaddress_details_hint">Long-press for details</string>
 
+    <string name="delete_alert_message">The wallet will be deleted!</string>
+    <string name="menu_delete">Delete</string><!-- like: "Delete wallet!" -->
+    <string name="delete_failed">Delete failed!</string>
+
+    <string name="menu_restore">Import wallet</string>
+    <string name="restore_failed">Import failed!</string>
 </resources>
